--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,12 @@ certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
 cryptography==41.0.3
+decorator==5.1.1
 defusedxml==0.7.1
 dnspython==2.4.2
 exchangelib==5.0.3
 frozenlist==1.4.0
+gssapi==1.8.2
 idna==3.4
 isodate==0.6.1
 lxml==4.9.3
@@ -23,8 +25,10 @@ pycparser==2.21
 Pygments==2.16.1
 pyOpenSSL==23.2.0
 pyspnego==0.9.1
+python-dotenv==1.0.0
 pytz==2023.3
 requests==2.31.0
+requests-gssapi==1.2.3
 requests-ntlm==1.2.0
 requests-oauthlib==1.3.1
 six==1.16.0
