--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,10 @@ exchangelib==5.0.3
 frozenlist==1.4.0
 python-dotenv==1.0.0
 openpyxl==3.1.2
-
+xlwings==0.30.13
+pyodbc==5.0.1
+SQLAlchemy==2.0.25
+pandas==2.1.4
 
 
 
